# memwarden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench.py  corpus.py
engram/: __init__.py  audit.py  cache.py  envelope.py  errors.py  governed.py  metrics.py  policy.py  signing.py  sweep.py  verify_cli.py
engram/backends/: pgvector.py  redis.py
engram/detect/: rules.py
engram/l2/: guardrails.py  scanner.py
engram/sidecar/: dynamo.py  local.py
eval/: heldout_eval.py  paper_experiments.py
examples/: langgraph_agent.py  raw_quickstart.py  strands_agent.py
memctl/: __init__.py
memctl/detect/: __init__.py
memwarden/: __init__.py  anchor.py  audit.py  errors.py  governed.py  lab.py  metrics.py  signing.py  sweep.py  verify_cli.py
memwarden/backends/: agentcore.py  base.py  inmemory.py  pgvector.py  redis.py
memwarden/l2/: scanner.py
memwarden/sidecar/: base.py  dynamo.py
policies/: policy.yaml
tests/: conftest.py  test_cache.py  test_conformance.py  test_detection.py  test_failure_modes.py  test_heldout_gate.py
