[project]
name = "memwarden"
version = "0.1.0"
description = "A governance layer for agentic memory: tenant isolation, per-category retention, provenance-based trust, and layered poisoning defense for AI agent memory stores."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vivek Raja P S", email = "vivekrajaps.offl@gmail.com" }]
keywords = ["agentic-ai", "ai-security", "memory-poisoning", "owasp-asi06",
            "governance", "gdpr", "bedrock-agentcore", "provenance", "llm-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["pyyaml>=6", "jsonschema>=4"]

[project.optional-dependencies]
agentcore = ["boto3>=1.34"]        # Amazon Bedrock AgentCore adapter + Guardrails L2
redis = ["redis>=5"]               # Redis backend adapter
pgvector = ["psycopg[binary]>=3", "pgvector>=0.2"]  # Postgres/pgvector adapter
aws = ["boto3>=1.34"]              # DynamoDB sidecar + S3 anchoring (self-host)
dev = ["pytest>=8", "boto3>=1.34"]
all = ["boto3>=1.34", "redis>=5", "psycopg[binary]>=3", "pgvector>=0.2"]

[project.urls]
Homepage = "https://memwarden.ai"                    # domain available; register when ready
Source = "https://github.com/OWNER/memwarden"        # replace OWNER with your GitHub handle/org

[project.scripts]
memwarden-verify = "memwarden.verify_cli:main"
memwarden-lab = "memwarden.lab:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memwarden", "memwarden.detect", "memwarden.backends", "memwarden.sidecar",
            "memwarden.l2"]

[tool.setuptools.package-data]
memwarden = ["py.typed"]
